--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "i18next": "^22.4.9",
     "node.js": "0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
